docs/version-1.30/modules/en/pages/explanations/distributing-policies.adoc
include::partial$variables.adoc[]
= Distributing policies
:page-languages: [en, de, es, fr, ja, pt, zh]
:revdate: 2025-07-09
:page-revdate: {revdate}
:description: A description of how {project-name} policies are distributed from OCI-compliant repositories.
:doc-persona: ["kubewarden-operator", "kubewarden-policy-developer", "kubewarden-distributor", "kubewarden-integrator"]
:doc-topic: ["distributing-policies"]
:doc-type: ["explanation"]
:keywords: ["{project-name}", "oci", "kubewarden", "policy", "wasm", "webassembly"]
:current-version: {page-origin-branch}

{project-name} policies are WebAssembly (Wasm) binaries evaluated by the {short-project-name} Policy Server.

The {short-project-name} policy server loads policies from these sources:

* Local filesystem
* HTTP(s) server
* OCI-compliant registries:
 ** https://github.com/distribution/distribution[Distribution]
 ** https://ghcr.io[GitHub container registry]
 ** https://azure.microsoft.com/en-us/products/container-registry/[Azure container registry]
 ** https://aws.amazon.com/ecr/[Amazon ECR]
 ** https://cloud.google.com/artifact-registry/[Google container registry]

{short-project-name} recommends distributing {short-project-name} policies via a regular
OCI-compliant registry. Container registries are a mandatory requirement for
any Kubernetes cluster. Having a single place to store, and secure, all the
artifacts required by a cluster is beneficial.

== Pushing policies to an OCI-compliant registry

The https://github.com/opencontainers/image-spec[OCI image format]
specification permits storing any binary blob inside a regular OCI-compliant
container registry.

The target OCI-compliant registry *must support artifacts* to successfully push
a {short-project-name} Policy to it.

You can use the https://github.com/kubewarden/kwctl[`kwctl`] CLI to push a
{short-project-name} Policy to an OCI-compliant registry.

== Annotating the policy

You also annotate a policy with `kwctl`. Annotating a {short-project-name}
policy is done by adding Wasm custom sections to the policy binary. This means
that the policy packages its own metadata.

The `kwctl annotate` command requires two inputs:

* the {short-project-name} policy to annotate, a local file in the filesystem.
* the annotations file, a file containing a YAML description of the policy metadata.
This file is usually located in the root project folder of your policy.

For example, you can save this file as `metadata.yml` in the current directory:

[subs="+attributes",yaml]
----
rules:
- apiGroups: ["*"]
  apiVersions: ["*"]
  resources: ["*"]
  operations: ["*"]
mutating: false
annotations:
  io.kubewarden.policy.title: palindromify
  io.kubewarden.policy.version: 0.1.0
  io.kubewarden.policy.description: Allows you to reject palindrome names in resources and namespace names, or to only accept palindrome names
  io.kubewarden.policy.author: Name Surname <name.surname@example.com>
  io.kubewarden.policy.url: https://github.com/<org>/palindromify
  io.kubewarden.policy.source: https://github.com/<org>/palindromify
  io.kubewarden.policy.license: Apache-2.0
  io.kubewarden.policy.usage: |
    This is markdown text and as such allows you to define a free form usage text.

    This policy allows you to reject requests if:
    - The name of the resource is a palindrome name.
    - The namespace name where this resource is created has a palindrome name.

    This policy accepts the following settings:

    - `invert_behavior`: bool that inverts the policy behavior. If enabled, only palindrome names will be accepted.
----

Now, let's annotate the policy:

[subs="+attributes",shell]
----
$ kwctl annotate policy.wasm \
    --metadata-path metadata.yml \
    --output-path annotated-policy.wasm
----

The annotation process performs certain optimizations on the policy, so often
the annotated policy is smaller than the original. This depends considerably on
the toolchain used to produce the original Wasm object.

[IMPORTANT]
====

.Use kwctl inspect to check your policy
[%collapsible]
======

[subs="+attributes",shell]
----
$ kwctl inspect annotated-policy.wasm
2023-08-24T12:06:27.986401Z  INFO sigstore::cosign::client_builder: Rekor public key not provided. Rekor integration disabled
2023-08-24T12:06:27.986449Z  INFO sigstore::cosign::client_builder: No Fulcio cert has been provided. Fulcio integration disabled
Details
title:                    palindromify
description:              Allows you to reject palindrome names in resources and namespace names, or to only accept palindrome names
author:                   Name Surname <name.surname@example.com>
url:                      https://github.com/<org>/palindromify
source:                   https://github.com/<org>/palindromify
license:                  Apache-2.0
mutating:                 false
background audit support: true
context aware:            false
execution mode:           kubewarden-wapc
protocol version:         1

Annotations
io.kubewarden.kwctl       1.7.0-rc2

Rules
────────────────────
- apiGroups:
  - '*'
  apiVersions:
  - '*'
  resources:
  - '*'
  operations:
  - '*'
────────────────────

Usage
This is markdown text and as such allows you to define a free form usage text.

This policy allows you to reject requests if:

• The name of the resource is a palindrome name.
• The namespace name where this resource is created has a palindrome name.

This policy accepts the following settings:

• invert_behavior: bool that inverts the policy behavior. If enabled, only palindrome names will be accepted.

Cannot determine if the policy has been signed. There was an error while attempting to fetch its signatures from the remote registry: invalid uri
----

======
====


== Pushing the policy

You can push an annotated policy like this:

[subs="+attributes",shell]
----
$ kwctl push annotated-policy.wasm \
     <oci-registry>/kubewarden-policies/palindromify-policy:v0.0.1
----

It's discouraged to push unannotated policies. The policy server uses the
metadata provided by annotations to correctly execute a policy. By default,
`kwctl push` refuses to push such a policy to an OCI registry. If you need an
unannotated policy, use the `-&#x200D;-&#x200D;force` flag of `kwctl push`.

You can reference a policy from the {short-project-name} Policy Server or `kwctl` as
`registry://<oci-registry>/kubewarden-policies/palindromify-policy:v0.0.1`.
